# tauri-plugin-prevent-default

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.json  Cargo.toml  LICENSE  README.md  build.rs  eslint.config.js  package.json  pnpm-lock.yaml  rustfmt.toml  tsconfig.json  vite.config.js
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: release.yml  test-pr.yml
.husky/: pre-commit
assets/: script.js
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: keyboard.toml  pointer.toml
permissions/schemas/: schema.json
scripts/: script.js
src/: command.rs  display.rs  error.rs  event.rs  lib.rs  listener.rs  script.js  script.rs  state.rs
src/platform/: macos.rs  mod.rs  webkit.rs  windows.rs
src/platform/ios/: WKWebView.rs
src/shortcut/: keyboard.rs  mod.rs  pointer.rs
