[package]
name = "tauri-plugin-prevent-default"
description = "Disable default browser shortcuts"
version = "1.3.0"
homepage = "https://github.com/ferreira-tb/tauri-plugin-prevent-default"
repository = "https://github.com/ferreira-tb/tauri-plugin-prevent-default"
documentation = "https://docs.rs/tauri-plugin-prevent-default"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
keywords = ["browser", "plugin", "tauri", "webview"]
categories = ["gui", "web-programming"]
links = "tauri-plugin-prevent-default"

[package.metadata.docs.rs]
no-default-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[lints.clippy]
clone_on_ref_ptr = "deny"
doc_markdown = "allow"
map_unwrap_or = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_borrow = "deny"
rest_pat_in_fully_bound_structs = "deny"
similar_names = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
useless_conversion = "deny"

[lints.clippy.pedantic]
level = "deny"
priority = -1

[dependencies]
bitflags = "2.9"
itertools = "0.14"
tauri = "2"
thiserror = "2"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.strum]
version = "0.27"
features = ["derive"]

[target."cfg(windows)".dependencies.webview2-com]
version = "0.37"
optional = true

[target."cfg(windows)".dependencies.windows]
version = "0.61"
optional = true

[build-dependencies.tauri-plugin]
version = "2.2"
features = ["build"]

[features]
unstable-windows = ["dep:webview2-com", "dep:windows"]
